--- a/src/allDocuments/吃喝玩乐/旅行日记.md
+++ b/src/allDocuments/吃喝玩乐/旅行日记.md
@@ -1,6 +1,6 @@
 # 旅行日记
 
-<img src="/src/assets/blog/旅行_1.jpg" alt="真好玩" width="500" height="300" />
+<img src="/xqw-blog/src/assets/blog/旅行_1.jpg" alt="真好玩" width="500" height="300" />
 
 这是一篇关于旅行的日记。
 
